# mcts-textual

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: valida-commit.yml
mcts/: pyproject.toml
mcts/src/mcts/: ia.py  jogo.py  main.py  tela.py
mcts/src/mcts/styles/: tela.tcss
src/mcts/: ia.py  jogo.py  main.py  tela.py
