[project]
name = "mcts"
version = "0.1.0"
description = ""
authors = [
    {name = "xTecna",email = "raquelmarcolino25@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "textual (>=3.2.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "mcts", from = "src"}]

[tool.poetry.scripts]
mcts = "mcts.main:main"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"

[tool.taskipy.tasks]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
