[project]
name = "mcts"
version = "0.1.0"
description = ""
authors = [
    {name = "xTecna",email = "raquelmarcolino25@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "textual (>=3.2.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "mcts", from = "src"}]

[tool.poetry.scripts]
mcts = "mcts.main:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
taskipy = "^1.14.1"
ruff = "^0.12.3"

[tool.taskipy.tasks]
fmt = "ruff format"
lint = "ruff format --check --diff && mypy --show-error-context --pretty src"

[tool.ruff]
target-version = "py313"
line-length = 119
src = ["src"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "single"

[tool.mypy]
warn_unused_configs = true
show_column_numbers = true
show_error_codes = true
sqlite_cache = true
strict = true
plugins = []
files = ["src/**/*.py"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
